fix: address product detail review cleanup